--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ body {
 
 img {
     display: block;
+    max-width: 100%;
 }
 
 .visually-hidden {
@@ -128,6 +129,11 @@ img {
 .masters,
 .hero-portfolio {
     background-color: var(--background-second-color);
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 /*--------------------------------------HEADER------------------------------------*/
@@ -205,6 +211,7 @@ img {
     border-radius: 4px;
     margin: auto;
     display: block;
+    margin-top: 30px;
 }
 
 .second-button {
@@ -216,30 +223,11 @@ img {
     line-height: 1.6;
     letter-spacing: 0.03em;
     color: var(--second-btn-color);
-    height: 50px;
+    /* height: 50px; */
     border: 1px solid var(--main-btn-color);
     border-radius: 4px;
     margin-right: 8px;
-}
-
-.button1 {
-    width: 73px;
-}
-
-.button2 {
-    width: 128px;
-}
-
-.button3 {
-    width: 145px;
-}
-
-.button4 {
-    width: 103px;
-}
-
-.button5 {
-    width: 130px;
+    padding: 6px 22px;
 }
 
 /*--------------------------------------HERO------------------------------------*/
@@ -257,7 +245,8 @@ img {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    width: 696px;
+    margin: 0 auto;
 }
 
 .hero-about-title {
@@ -266,7 +255,6 @@ img {
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--about-title-color);
-    margin-top: 20px;
     margin-bottom: 4px;
 }
 
@@ -277,15 +265,9 @@ img {
     color: var(--about-title-type-color);
 }
 
-.hero-portfolio {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
 .hero-list {
     display: flex;
     justify-content: center;
-    margin-right: 30px;
     margin-bottom: 50px;
 }
 
@@ -296,25 +278,29 @@ img {
     margin-bottom: -30px;
 }
 
+.hero-about-item {
+    border: 1px solid;
+}
+
 .hero-about-list > .hero-about-item {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
 }
 
-
-
+.hero-about-content {
+    padding: 20px 24px;
+}
 
 
 /*---------------------------------BENEFITS------------------------------------*/
 .benefits {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    background-color: var(--background-second-color);
 }
 
 .benefits-list {
     display: flex;
-    margin-right: 4px;
+    margin-right: -30px;
 }
 
 .benefits-title {
@@ -334,10 +320,20 @@ img {
     color: var(--benefits-text);
 }
 
+.benefits-item {
+    flex-basis: calc(100% / 4 - 30px);
+}
+
+
+
+
 /*---------------------------------GALLERY-------------------------------------*/
+.gallery {
+    padding-top: 0;
+}
+
 .gallery-list {
     display: flex;
-    padding-bottom: 94px;
 }
 
 .gallery-title {
@@ -349,14 +345,13 @@ img {
     margin-bottom: 50px;
 }
 
-.gallery-item+.gallery-item {
+.gallery-item + .gallery-item {
     margin-left: 30px;
 }
 
 /*---------------------------------MASTERS-------------------------------------*/
 .masters {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    background-color: var(--background-second-color);
 }
 
 .masters-title {
@@ -391,11 +386,18 @@ img {
 .masters-list {
     display: flex;
     margin-right: -30px;
+    justify-content: center;
 }
 
 .masters-item {
-    flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+    border: 1px solid;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
+
+
 
 
 /*--------------------------------------FOOTER------------------------------------*/
@@ -405,15 +407,23 @@ img {
     padding-bottom: 60px;
 }
 
+.footer-adress {
+    margin-top: 20px;
+}
 .footer-link {
     font-style: normal;
     margin-bottom: 9px;
+}
+
+.footer-link:last-child {
+    margin-bottom: 0px;
 }
 
 .footer-location {
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--main-btn-color);
+    margin-top: 20px;
 }
 
 .footer-mail,
