--- a/css/styles.css
+++ b/css/styles.css
@@ -393,6 +393,9 @@ img {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.masters-item:last-child {
+    margin-right: 0px;
+}
 /*--------------------------------------FOOTER------------------------------------*/
 .footer {
     background-color: var(--background-link-color);
