--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,11 @@ img {
 
 .benefits-item {
     flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+}
+
+.benefits-item:last-child {
+    margin-right: 0px;
 }
 
 /*---------------------------------GALLERY-------------------------------------*/
@@ -382,7 +387,6 @@ img {
 .masters-list {
     display: flex;
     margin-right: -30px;
-    justify-content: center;
 }
 
 .masters-item {
