--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ img {
 .hero-about-list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+    margin-right: -30px;
     margin-bottom: -30px;
 }
 
@@ -283,7 +283,7 @@ img {
 
 .hero-about-list > .hero-about-item {
     flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
     margin-bottom: 30px;
 }
 
