--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ img {
     background-color: var(--background-second-color);
     padding-top: 24px;
     padding-bottom: 25px;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header .container {
@@ -289,6 +290,9 @@ img {
 
 .hero-about-content {
     padding: 20px 24px;
+    border-left: 24px;
+    border-bottom: 20px;
+    border-right: 24px;
 }
 
 
