--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     --background-color: #E5E5E5;
     --background-second-color: #ffffff;
     --background-link-color: #2F303A;
-
+    --border-porfolio: #EEEEEE;
 }
 
 p,
@@ -256,6 +256,7 @@ img {
     letter-spacing: 0.06em;
     color: var(--about-title-color);
     margin-bottom: 4px;
+        margin-top: 20px;
 }
 
 .hero-about-type {
@@ -278,21 +279,18 @@ img {
     margin-bottom: -30px;
 }
 
-.hero-about-item {
-    border: 1px solid;
-}
-
-.hero-about-list > .hero-about-item {
+.hero-about-list>.hero-about-item {
     flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
 .hero-about-content {
-    padding: 20px 24px;
-    border-left: 24px;
-    border-bottom: 20px;
-    border-right: 24px;
+    border: 1px solid #EEEEEE;
+    border-right: 24px solid #EEEEEE;
+    border-left: 24px solid #eeeeee;
+    border-bottom: 20px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 
@@ -350,7 +348,7 @@ img {
     margin-bottom: 50px;
 }
 
-.gallery-item + .gallery-item {
+.gallery-item+.gallery-item {
     margin-left: 30px;
 }
 
@@ -396,7 +394,7 @@ img {
 .masters-item {
     flex-basis: calc(100% / 4 - 30px);
     margin-right: 30px;
-    border: 1px solid;
+    border: 1px solid var(--background-second-color);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -404,6 +402,7 @@ img {
 .masters-item:last-child {
     margin-right: 0px;
 }
+
 /*--------------------------------------FOOTER------------------------------------*/
 .footer {
     background-color: var(--background-link-color);
@@ -414,6 +413,7 @@ img {
 .footer-adress {
     margin-top: 20px;
 }
+
 .footer-link {
     font-style: normal;
     margin-bottom: 9px;
