--- a/css/styles.css
+++ b/css/styles.css
@@ -286,10 +286,10 @@ img {
 }
 
 .hero-about-content {
-    border: 1px solid #EEEEEE;
-    border-right: 24px solid #EEEEEE;
-    border-left: 24px solid #eeeeee;
-    border-bottom: 20px solid #EEEEEE;
+    border: 1px solid var(--border-porfolio);
+    border-right: 24px solid var(--border-porfolio);
+    border-left: 24px solid var(--border-porfolio);
+    border-bottom: 20px solid var(--border-porfolio);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -394,7 +394,7 @@ img {
 .masters-item {
     flex-basis: calc(100% / 4 - 30px);
     margin-right: 30px;
-    border: 1px solid var(--background-second-color);
+    border: 1px solid var(--border-porfolio);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
